--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
+        "laracasts/utilities": "^3.1",
         "laravel/framework": "^7.24",
         "laravel/socialite": "^4.4",
         "laravel/tinker": "^2.0",
