--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "font-awesome": "^4.7.0",
-        "ol": "^6.4.3"
+        "font-awesome": "^4.7.0"
     }
 }
