seeder + small changes

--- a/live.env
+++ b/live.env
@@ -1,5 +1,5 @@
 APP_NAME=2ndTreasure
-APP_ENV=local
+APP_ENV=development
 APP_KEY=base64:MDrFkc5FybsjGX8cT/bYuMXfHXta54AUvSPx6zGIDKc=
 APP_DEBUG=true
 APP_URL=https://2ndtreasure.live
